Rental create with removing RentalCreateDTO